# Raysim

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MVP_PLAN.md  MVP_STEPS.md  README.md  pyproject.toml
.claude/skills/TRIP-1-plan/: SKILL.md
.claude/skills/TRIP-2-implement/: SKILL.md
.claude/skills/TRIP-3-review/: SKILL.md  checklist.md  cr-template.md
.claude/skills/TRIP-4-test/: SKILL.md
.claude/skills/codex-code-review/: SKILL.md
.claude/skills/codex-plan-review/: SKILL.md
.codex/skills/: TRIP-1-plan  TRIP-2-implement  TRIP-3-review  TRIP-4-test  TRIP-compact  TRIP-hotfix  TRIP-init  TRIP-research
.github/workflows/: ci.yml
.obsidian/: workspace.json
benchmarks/: README.md  analytic_targets.yaml
benchmarks/assemblies/custom_test_article/: aluminum.stl  copper.stl  (+3 more)
benchmarks/step/: aluminum_box.step  coincident_faces.step  coincident_faces_mismatched.step  coincident_faces_partial.step  concentric_shell.step  hollow_box.step  interference_partial_large.step  interference_partial_small.step  manifest.json  nested_pin.step  reversed_outer.step
docs/: ARCHI-rules.md  ARCHI.md
docs/1-plans/: F_0.1.0_phase-b1-geometry-pipeline.plan.md  F_0.2.0_phase-b2-materials-project-file.plan.md  F_0.3.0_phase-b3-ui-authoring.plan.md  F_0.4.0_decouple-overlap-diagnostic.plan.md  F_0.4.1_viewer-ux-improvements.plan.md
docs/2-changelog/: changelog_table.md  w1_v0.1.0.md  w1_v0.2.0.md  w1_v0.3.0.md  w1_v0.3.1.md  w1_v0.4.0.md
docs/3-code-review/: CR_w1_v0.1.0.md  CR_w1_v0.2.0.md  CR_w1_v0.3.0.md  CR_w1_v0.3.1.md  CR_w1_v0.4.0.md
docs/4-unit-tests/: TESTING.md
docs/5-tuto/: tuto_0.1.0.md  tuto_0.2.0.md  tuto_0.3.0.md  tuto_0.3.1.md  tuto_0.4.0.md
docs/6-memo/: 2026-05-01_b3-windows-testing-status.md
docs/decisions/: phase-0.md
scripts/: build_benchmarks.py  build_step_fixtures.py  clean-windows-env.ps1  install-linux.sh  install-windows.ps1
src/raysim/: __init__.py
tests/fixtures/: dose700km.dos  step_leaf_golden.yaml
tests/integration/: test_benchmark_corpus.py  test_phase_a_acceptance.py  test_phase_b1_acceptance.py
tests/unit/: test_aggregator.py  test_cli_loaders.py  test_cli_smoke.py  test_dose_spline.py  test_embreex_smoke.py  test_geom_adapter.py  test_healing.py  test_healpix_smoke.py  test_mat_gating.py  test_mat_library.py  test_mat_review.py  test_mat_rules.py  test_mat_step_tags.py  test_occt_smoke.py  test_omere_dos.py  test_overlap.py  test_proj_project.py  test_proj_schema.py  test_run_worker.py  test_scene_loader.py  test_step_loader.py  test_tessellation.py  test_tracer.py  test_watertightness.py
(+64 files in other folders)
